feat(mcq): rebuild Q39 в multi-line формате в java-17-21-interview.md
Q39 (sealed + pattern matching exhaustiveness) — correct=B, разбор когда default ОБЯЗАТЕЛЕН (open hierarchies) vs когда не нужен (sealed), refactoring safety при добавлении новых subtypes, dominance order, null handling в Java 21.

Восстановлен ## Q40 заголовок. Осталось 3 corrupted блока (Q40, Q41, Q42 + final stray).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>